--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                         </ul>
                     </li>
                 </ul>
-            <!-- End: Nav-->
-
+            <!-- End: Nav Nav-->
+            
             ,
             <!-- Mobile menu button -->
             <div id="mobile-menu" class="mobile-menu-btn">
